--- a/index.html
+++ b/index.html
@@ -6,29 +6,8 @@
 
 <table class="client-table">
     <tr class="static-header">
-        <td>
-            Client ID
-        </td>
-        <td>
-            Client Name
-        </td>
-        <td>
-            Expiry Date
-        </td>
-        <td>
-            Grace Period
-        </td>
-        <td>
-            License Key
-        </td>
-        <!-- <td>
-            Status
-        </td> -->
-        <td>
 
-        </td>
     </tr>
-
 </table>
 
 
@@ -61,6 +40,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 <script src = "FireCRUD.js"></script>
+<script src = "index.js"></script>
 
 <!-- Boostrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
