--- a/index.html
+++ b/index.html
@@ -3,29 +3,16 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css">
 
-
-<table class="client-table">
-    <tr class="static-header">
-
-    </tr>
-</table>
-
-
 <div class="modal fade" id="deleteModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Are you sure you want to delete the client: <span class="delete-name"> </span>?</h4>
+                <h4 class="modal-title">Are you sure you want to delete this Client?</h4>
             </div>
             <div class="modal-body">
                 <p><u>Details</u></p>
-                <p>Client: <span class="delete-name"></span></p>
-                <p>ID: <span class="delete-id"></span></p>
-                <p>Expiry Date: <span class="delete-expirydate"></span></p>
-                <p>Grace Period: <span class="delete-graceperiod"></span></p>
-                <p>License ID: <span class="delete-licenseid"></span></p>
-                <p>Status: <span class="delete-status"></span></p>
+                <span id="user-info-deletion"></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
