added modal as an alternative to inline edits

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css">
 
-<div class="modal fade" id="deleteModal">
+<div class="modal fade" id="modal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -12,11 +12,11 @@
             </div>
             <div class="modal-body">
                 <p><u>Details</u></p>
-                <span id="user-info-deletion"></span>
+                <span id="user-info-content"></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger finalDelete">Delete</button>
+                <button type="button" class="btn btn-danger finalEditDelete">Delete</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
